[gd_scene load_steps=9 format=3 uid="uid://dw8k2uqmaseg8"]

[ext_resource type="PackedScene" uid="uid://dk0rju2burbho" path="res://Bird/bird.tscn" id="1_d67c1"]
[ext_resource type="Texture2D" uid="uid://c6ox46g45adow" path="res://sprites/background-day.png" id="1_lybkl"]
[ext_resource type="Script" path="res://Game/game_scene.gd" id="1_p648m"]
[ext_resource type="PackedScene" uid="uid://dcdycp0ygnie4" path="res://pipes/pipes.tscn" id="3_lnqyv"]
[ext_resource type="FontFile" uid="uid://2ldvjxx2t16b" path="res://fonts/new_font_file.tres" id="5_7glo2"]
[ext_resource type="Texture2D" uid="uid://btlj0hwgq165a" path="res://sprites/base.png" id="5_428cw"]
[ext_resource type="PackedScene" uid="uid://cip7f6lbh72i" path="res://Game Manager/score_container.tscn" id="8_3n1tg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdj02"]
size = Vector2(743, 20)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_p648m")
pipes_scene = ExtResource("3_lnqyv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(243, 463)
scale = Vector2(2.04861, 1.92969)
texture = ExtResource("1_lybkl")

[node name="BirdCB" parent="." instance=ExtResource("1_d67c1")]
position = Vector2(62, 426)

[node name="Base" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(243, 871)
scale = Vector2(1.75, 1.48214)
texture = ExtResource("5_428cw")

[node name="PipesHolder" type="Node" parent="."]

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(260, 799)
shape = SubResource("RectangleShape2D_gdj02")

[node name="SpawnU" type="Marker2D" parent="."]
position = Vector2(540, 540)

[node name="SpawnL" type="Marker2D" parent="."]
position = Vector2(540, 280)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_7glo2")
theme_override_font_sizes/font_size = 54
text = "Game Over"

[node name="RestartLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 57.0
offset_right = 99.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_7glo2")
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -54.0
offset_right = 166.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreContainer" parent="CanvasLayer" instance=ExtResource("8_3n1tg")]
offset_top = 6.0
offset_bottom = 46.0
alignment = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_restart"]
